--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Stránka</title>
+    <title>Typhography Library</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="navbar__title"><h1>Stránka</h1></div>
+            <div class="navbar__title"><h1>Typhography Library</h1></div>
             <ul class="navbar__menu">
-                <li><a href="#headings" class="navbar__item">Headings</a></li>
-                <li><a href="#text" class="navbar__item">Text</a></li>
-                <li><a href="#buttons" class="navbar__item">Buttons</a></li>
+                <li><a href="#headings">Headings</a></li>
+                <li><a href="#text">Text</a></li>
+                <li><a href="#buttons">Buttons</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <section class="intro">
+            <p class="section__info">Maestro is a free typography CSS library. It was created for a school project. You don't need to make new CSS file every time you start new project. Maestro helps you style your headlines, special text markups, images, lists, basic tables, buttons, alerts and more. It's responsible and cross-browser friendly.</p>
+        </section>
         <section id="headings">
             <h2>Headings <code>&lt;h1&gt; - &lt;h6&gt;</code></h2>
             <p class="section__info">Search engines use the headings to index the structure and content of your web pages. Users often skim a page by its headings. It is important to use headings to show the document structure. In the code sample below you can see how to implement heading in your code.</p>
             <div>
-                <h2 class="text-h1">#1 Heading</h2>
+                <h1>#1 Heading</h1>
                 <h2>#2 Heading</h2>
                 <h3>#3 Heading </h3>
                 <h4>#4 Heading </h4>
@@ -50,5 +53,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>Vytvořila Forsterová</p>
+    </footer>
 </body>
 </html>
