--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
     </main>
     <footer>
-        <p>Vytvořila Forsterová</p>
+        <p>Vytvořilo miniprasátko v botičkách a pršiplášti</p>
     </footer>
 </body>
 </html>
