--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./download/style.css">
     <script src="https://kit.fontawesome.com/25bb546d7b.js" crossorigin="anonymous"></script>
     <title>Typhography Library</title>
 </head>
